Fix diagonal overflow [ch2734]

--- a/app/assets/stylesheets/views/home/index.scss
+++ b/app/assets/stylesheets/views/home/index.scss
@@ -182,7 +182,6 @@
           > .diagonal {
             bottom: 0;
             height: 0;
-            left: 0;
             position: absolute;
             right: 0;
             z-index: 10;
